prometheus/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: stable
    meta.helm.sh/release-namespace: prometheus
  creationTimestamp: "2024-09-26T23:47:02Z"
  labels:
    app.kubernetes.io/instance: stable
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 11.1.3
    helm.sh/chart: grafana-8.4.4
  name: stable-grafana
  namespace: prometheus
  resourceVersion: "8774"
  uid: 7759294d-f23d-4fa4-ba0d-26db12121836
spec:
  clusterIP: 172.20.74.88
  clusterIPs:
  - 172.20.74.88
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: stable
    app.kubernetes.io/name: grafana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
